<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/footbal_field"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#60000000"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="clickReset"
        android:text="@string/reset_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingTop="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/teamA_name"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#50000000"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/goal_title"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#50000000"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/portugal_flag"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/portugal_flag" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/teamA_score"
                    android:textColor="#FFFFFF"
                    android:textSize="50sp" />

            </LinearLayout>

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:onClick="clickGoalTeamA"
                android:text="@string/button_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#50000000"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/penalty_title"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#50000000"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/penalties_teamA"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/penalty_cards" />

                <TextView
                    android:id="@+id/team_a_penalties"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/teamA_score"
                    android:textColor="#FFFFFF"
                    android:textSize="44sp" />

            </LinearLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:onClick="clickPenaltyTeamA"
                android:text="@string/button_3"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#F0F0F0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/teamB_Name"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#50000000"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/goal_title"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#50000000"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/teamB_score"
                    android:textColor="#FFFFFF"
                    android:textSize="50sp" />

                <ImageView
                    android:id="@+id/spain_flag"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/spain_flag" />

            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:onClick="clickGoalTeamB"
                android:text="@string/button_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#50000000"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/penalty_title"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#50000000"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/team_b_penalties"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/teamA_score"
                    android:textColor="#FFFFFF"
                    android:textSize="44sp" />

                <ImageView
                    android:id="@+id/penalties_teamB"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/penalty_cards" />

            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:onClick="clickPenaltyTeamB"
                android:text="@string/button_4"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

